test(SettlementEntityManager): make some methods available to tests